--- a/PegadaChave/Views/Shared/_Layout.cshtml
+++ b/PegadaChave/Views/Shared/_Layout.cshtml
@@ -68,7 +68,7 @@
 
     @RenderBody()
     <footer class="custom-footer">
-        <div class="store-name">Pegada Chave</div>
+        <div class="store-name">BILLY DUKE</div>
         <div class="footer-columns">
             <div class="footer-column">
                 <h4>AJUDA</h4>
