aprimorado tela de carrinho

--- a/PegadaChave/Views/Carrinho/Index.cshtml
+++ b/PegadaChave/Views/Carrinho/Index.cshtml
@@ -8,22 +8,27 @@
     @Styles.Render("~/Content/CarrinhoStyle.css")
 </head>
 
-<body style="background-color: #f2f2f2">
+<main style="background-color: #f2f2f2; padding-top: 2%; padding-bottom: 2%" >
 
     <!-- Menu Hamburguer -->
     <div id="sidebar" style="position: fixed; left: 0; top: 0; height: 100%; width: 250px; background-color: white; padding: 15px; display: none;">
         <button id="closeSidebar">X</button>
         <h4>@Model.Item2.nomeUsuario</h4>
-        <p>Tipo de Usuário</p>
+        @*<p>Tipo de Usuário</p>*@
         <a href="@Url.Action("Logout", "Login")">Sair</a>
     </div>
 
     <!-- Conteúdo Principal -->
-    <div id="content" style="padding: 5%; margin: 5%; border-radius: 25px; background-color: white; transition: transform 0.3s;">
-        <button id="sidebarCollapse" class="btn btn-close-white">
-            @*<i class="bi bi-list"></i>*@
-        </button>
+    <div id="content" style="padding: 5%; margin: 5%; border-radius: 25px; background-color: white; transition: transform 0.3s; box-shadow: rgba(204, 204, 204, 0.1) 10px 10px ">
+        <div class="row">
 
+            <button id="sidebarCollapse" class="btn btn-close-white col-1" style="border-radius: 50%; background-color: white; color: black">
+                <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-list" viewBox="0 0 24 24">
+                    <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
+                </svg>
+            </button>
+
+        </div>
         <h2>Carrinho de Compras</h2>
 
         <div class="row">
@@ -78,7 +83,7 @@
 
                 <div style="padding-top: 2%" class="text-right">
 
-                    <button type="button" class="btn btn-primary">Finalizar Compra</button>
+                    <button type="button" class="btn btn-dark">Finalizar Compra</button>
                 </div>
             </div>
 
@@ -107,4 +112,4 @@
             transform: translateX(250px); /* Ajusta a posição horizontal quando o menu está aberto */
         }
     </style>
-</body>
+</main>
