--- a/PegadaChave/Content/FooterStyle.css
+++ b/PegadaChave/Content/FooterStyle.css
@@ -39,7 +39,7 @@ li {
 
 a {
     text-decoration: none; /* Remova o sublinhado padrão */
-    color: rgba(255, 255, 255, 0.75);
+    color: rgba(255, 255, 255, 0.75) !important;
     border-bottom: 1px solid rgba(255, 255, 255, 0.75); /* Defina a borda inferior como transparente */
     transition: border-bottom 0.3s ease;
 }
