--- a/PegadaChave/Views/Home/Index.cshtml
+++ b/PegadaChave/Views/Home/Index.cshtml
@@ -21,49 +21,49 @@
                     <img src="~/Content/Image/ImagemAuxiliarProjeto/HOME/Home01G.png" class="d-block" alt="...">
                     <div class="carousel-caption d-block">
                         <h5 class="chamadabotao">A Favela Venceu</h5>
-                        <button type="button" class="btn btn-secondary btn-lg botaohome"><a href="@Url.Action("Index", "Products")">VER MAIS</a></button>
+                        <button type="button" class="btn btn-secondary btn-lg botaohome"><a class="verMais" href="@Url.Action("Index", "Products")">VER MAIS</a></button>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="~/Content/Image/ImagemAuxiliarProjeto/HOME/Home02G.png" class="d-block" alt="...">
                     <div class="carousel-caption d-block">
                         <h5 class="chamadabotao">Vista-se com Atitude</h5>
-                        <button type="button" class="btn btn-secondary btn-lg botaohome"><a href="@Url.Action("Index", "Products")">VER MAIS</a></button>
+                        <button type="button" class="btn btn-secondary btn-lg botaohome"><a class="verMais" href="@Url.Action("Index", "Products")">VER MAIS</a></button>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="~/Content/Image/ImagemAuxiliarProjeto/HOME/Home07G.png" class="d-block" alt="...">
                     <div class="carousel-caption d-block">
                         <h5 class="chamadabotao">Ostente Seu Estilo Único</h5>
-                        <button type="button" class="btn btn-secondary btn-lg botaohome"><a href="@Url.Action("Index", "Products")">VER MAIS</a></button>
+                        <button type="button" class="btn btn-secondary btn-lg botaohome"><a class="verMais" href="@Url.Action("Index", "Products")">VER MAIS</a></button>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="~/Content/Image/ImagemAuxiliarProjeto/HOME/Home03G.png" class="d-block" alt="...">
                     <div class="carousel-caption d-block">
                         <h5 class="chamadabotao">O Gueto Ostenta</h5>
-                        <button type="button" class="btn btn-secondary btn-lg botaohome"><a href="@Url.Action("Index", "Products")">VER MAIS</a></button>
+                        <button type="button" class="btn btn-secondary btn-lg botaohome"><a class="verMais" href="@Url.Action("Index", "Products")">VER MAIS</a></button>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="~/Content/Image/ImagemAuxiliarProjeto/HOME/Home04G.png" class="d-block" alt="...">
                     <div class="carousel-caption d-block">
                         <h5 class="chamadabotao">Roupas que Falam por nós</h5>
-                        <button type="button" class="btn btn-secondary btn-lg botaohome"><a href="@Url.Action("Index", "Products")">VER MAIS</a></button>
+                        <button type="button" class="btn btn-secondary btn-lg botaohome"><a class="verMais" href="@Url.Action("Index", "Products")">VER MAIS</a></button>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="~/Content/Image/ImagemAuxiliarProjeto/HOME/Home05G.png" class="d-block" alt="...">
                     <div class="carousel-caption d-block">
                         <h5 class="chamadabotao">Moda de Quebrada</h5>
-                        <button type="button" class="btn btn-secondary btn-lg botaohome"><a href="@Url.Action("Index", "Products")">VER MAIS</a></button>
+                        <button type="button" class="btn btn-secondary btn-lg botaohome"><a class="verMais" href="@Url.Action("Index", "Products")">VER MAIS</a></button>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="~/Content/Image/ImagemAuxiliarProjeto/HOME/Home06G.png" class="d-block" alt="...">
                     <div class="carousel-caption d-block">
                         <h5 class="chamadabotao">Estilo nas Ruas e Poder no Visual</h5>
-                        <button type="button" class="btn btn-secondary btn-lg botaohome"><a href="@Url.Action("Index", "Products")">VER MAIS</a></button>
+                        <button type="button" class="btn btn-secondary btn-lg botaohome"><a class="verMais" href="@Url.Action("Index", "Products")">VER MAIS</a></button>
                     </div>
                 </div>
             </div>
