--- a/PegadaChave/Content/HeadStyle.css
+++ b/PegadaChave/Content/HeadStyle.css
@@ -17,6 +17,10 @@ nav {
     display: flex;
     flex-direction: column;
     background-color: #fff;
+    box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.05);
+    padding-bottom: 12px;
+    margin-bottom: 24px;
+    padding-top: 40px;
 }
 
 .nav-row {
@@ -30,9 +34,9 @@ nav {
     width: 33%;
 }
 
-.logo-row {
+/*.logo-row {
     box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
-}
+}*/
 
 .logo1 {
     display: none;
@@ -81,6 +85,7 @@ nav {
     margin-bottom: 10px;
     width: 100%;
     justify-content: center;
+    color: black;
 }
 
     .genders-row a {
