adicionado link para pagina de login no icone da home

--- a/PegadaChave/Views/Shared/_Layout.cshtml
+++ b/PegadaChave/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                         </a>
                     </div>
                     <div class="item">
-                        <a href="">
+                        <a href="@Url.Action("Index", "Login")">
                             <img src="~/Content/Image/ImagemAuxiliarProjeto/pessoa.png" alt="Ícone de perfil">
                         </a>
                     </div>
